--- a/content/style.css
+++ b/content/style.css
@@ -1,4 +1,4 @@
-.loginBox{
+.menuBox{
 
 	min-height:200px;
 	width:300px;
@@ -14,21 +14,23 @@
 
 }
 
-.loginButton{
+
+.menuButton{
 	border:none;
 	border-radius: 10px;
 	margin:10px;
 	background:#E0D2C4;
 }
 
-.loginButton:hover{
+.menuButton:hover{
 	background:#E8DDD3;
 }
-.loginButton:active{
+.menuButton:active{
 	background:#E0D2C4;
 }
 
-.loginInput{
+.menuInput{
+	min-width: 200px;
 	border: none;
 	border: 2px solid #7D644B;
 	border-radius: 10px;
@@ -45,10 +47,8 @@
 	font-family: Certa;
 }
 
-.ui{
-	height:100%;
-	width:100%;
-	background: #CC33FF;
+.hidden{
+
 	opacity:0;
 	display:none;
 }
