--- a/content/style.css
+++ b/content/style.css
@@ -3,9 +3,9 @@
 	min-height:200px;
 	width:300px;
 	background: #D8C7B5;
-	color: #7D644B;
+	color: #3D2914;
 	font-size: 20px;
-	font-family: Certa;
+	font-family: Palatino;
 	border: 2px solid #7D644B;
 	padding: 10px;
 	text-align: center;
@@ -17,7 +17,7 @@
 .menuButton{
 	width:200px;
 	border:none;
-	border-radius: 10px;
+	
 	margin:10px;
 	background:#E0D2C4;
 }
@@ -33,7 +33,6 @@
 	min-width: 200px;
 	border: none;
 	border: 2px solid #7D644B;
-	border-radius: 10px;
 	padding-left:5px;
 	color: black;
 }
@@ -44,7 +43,7 @@
 }
 
 .headerStyle{
-	font-family: Certa;
+	font-family: Palatino;
 }
 
 .hidden{
@@ -65,7 +64,6 @@
 
 .loadingBox{
 	border: 2px solid #2E1F0F;
-	border-radius: 10px;
 	margin-top: 60px;
 	background: #7D644B;
 	text-align: center;
